python-web-server/tests/http/requests/invalid/003c.py
from web_server.errors import InvalidRequestMethod

request = InvalidRequestMethod
